Fixing Alignment

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 body {
   color: black;
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
   height: 100%;
   background: #fff;
@@ -22,10 +22,9 @@ canvas {
 }
 
 .screen-max-width {
-  margin-inline-start: auto;
-  margin-inline-end: auto;
-  position: relative;
-  max-width: 1120px;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+
 }
 
 @layer utilities {
